  persisted. This already was the case when the editor crashed.
- When a nonexistent file gets passed to `--config-py`, qutebrowser now
  complains instead of silently not loading it.
- With some (rare) setups, opening the report dialog or using a PAC proxy with
  QtWebKit could result in qutebrowser hanging due to a PyQt bug. There's now a
  workaround which prevents the hang.

Removed
~~~~~~~

- The `qute://spawn-output` page used by `:spawn -o` is now removed, as it's
  replaced by the new `qute://process` pages.

[[v2.1.1]]
v2.1.1 (2021-04-01)
-------------------

Added
~~~~~

- Site-specific quirk for krunker.io, which shows a "Socket Error" with
  qutebrowser's default Accept-Language header. The workaround is equivalent to
  doing `:set -u matchmaker.krunker.io content.headers.accept_language ""`.

Changed
~~~~~~~

- Clicking the 'x' in the devtools window to hide it now also leaves insert
  mode.

Fixed
~~~~~

- The workaround for black on (almost) black formula images in dark mode now
  also works with Qt 5.12 and 5.13.
- When running in Flatpak or with the Windows/macOS releases, the QtWebEngine
  version is now detected properly. Before, a wrong version was assumed, breaking
  dark mode and certain workarounds (resulting in crashes on websites like
  LinkedIn or TradingView).
- When the metainfo in the completion database doesn't have the expected
  structure, qutebrowser now tries to gracefully recover from the situation
  instead of crashing.
- When qutebrowser displays an error during initialization, opening a second
  instance would lead to a crash. Instead, qutebrowser now ignores the attempt
  to open a new page as long as it's not fully initialized yet.
- When the Brave adblock cache folder was unreadable, qutebrowser crashed. It
  now displays an error instead.
- Fixes in the `qute-pass` userscript for `gopass`:
  * Generating OTP tokens now works correctly.
  * Storing the username as part of the secret broke in v2.0.0 and now works
    again.