@@ -121,6 +121,8 @@ Fixed
 - With some (rare) setups, opening the report dialog or using a PAC proxy with
   QtWebKit could result in qutebrowser hanging due to a PyQt bug. There's now a
   workaround which prevents the hang.
+- QtWebEngine version detection (influencing things like dark mode settings or
+  certain workarounds) now works correctly on OpenBSD.
 
 Removed
 ~~~~~~~
